--- a/detail.html
+++ b/detail.html
@@ -15,7 +15,7 @@
       </ul>
   </div>
 </header>
-    <h1><a href="index.html">craigslist</a></h1>
+    <h1><a href="index.html">craiglist</a></h1>
     <h3>new york city</h3>
 <div class= "main">
   <nav>
